# HW12

./: main.py  pyproject.toml
src/: schemas.py
src/config/: config.ini
src/db/: db_connection.py  models.py
src/repository/: users.py
src/routes/: contacts.py
src/services/: auth.py
