[tool.poetry]
name = "hw12"
version = "0.1.0"
description = ""
authors = ["jockerlol <jockerlol1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
alembic = "^1.12.1"
sqlalchemy = "^2.0.22"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.4.2"}
cryptography = "^41.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
